--- a/Data/style.css
+++ b/Data/style.css
@@ -403,4 +403,13 @@ tr.selected {
   .country-grid {
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   }
+
+  .top-right-logo {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 50px; /* Adjust size as needed */
+    height: auto;
+    z-index: 1001; /* Ensure it's above other content */
+  }
 }
